# CMake

./: .gitmodules
AlternativeProject/: CMakeLists.txt
ConfigureFile/: CMakeLists.txt
ConfigureFile/app/: CMakeLists.txt  main.cc
ConfigureFile/src/my_lib/: my_lib.cc
ExternalLibraries/: CMakeLists.txt  Makefile
ExternalLibraries/app/: CMakeLists.txt  main.cc
ExternalLibraries/cmake/: AddGitSubmodule.cmake
ExternalLibraries/configured/: config.hpp.in
ExternalLibraries/src/my_lib/: CMakeLists.txt
HelloWorld/: CMakeLists.txt  main.cc
IntermediateProject/: CMakeLists.txt
VariablesAndOptions/: CMakeLists.txt  Makefile
VariablesAndOptions/app/: CMakeLists.txt  main.cc
